back to books chapter 13-6

--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -12,14 +12,16 @@
           <li class="{{activeRouteClass 'home' 'newPosts'}}">
             <a href="{{pathFor 'newPosts'}}">New</a>
           </li>
-          <li class="{{activeRouteClass 'bestPosts'}}">
+          <li class="{{activeRouteClass  'bestPosts'}}">
             <a href="{{pathFor 'bestPosts'}}">Best</a>
           </li>
           {{#if currentUser}}
             <li class="{{activeRouteClass 'postSubmit'}}">
               <a href="{{pathFor 'postSubmit'}}">Submit Post</a>
             </li>
-            <li class="dropdown">{{> notifications}}</li>
+            <li class="dropdown">
+              {{> notifications}}
+            </li>
           {{/if}}
         </ul>
         <ul class="nav pull-right">
